# cookiecutter_template

./: Makefile  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
{{ cookiecutter.repo_name }}/helm/: Chart.yaml  kubectl_cheat_sheet.md
{{ cookiecutter.repo_name }}/helm/templates/: deployment.yaml  service.yaml
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: _version.py
