[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
{% if cookiecutter.author_email is defined %}
{name = "{{ cookiecutter.author_name }}"},
{% else %}
{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
{% endif %}
]

dependencies = [
  "pandas >= 1.4.0",
]
dynamic = ["version"]
name = "{{ cookiecutter.repo_name }}"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
  "sklearn>=1.21.0"
]

[tool.coverage.run]
source_pkgs = [
  "{{ cookiecutter.repo_name }}",
]

[tool.mypy]
files = "src/{{ cookiecutter.repo_name }}"
ignore_missing_imports = true
python_version = "3.13"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.repo_name }}/_version.py"
version_scheme = "python-simplified-semver"
