[tool.mypy]
files = "src/{{ cookiecutter.repo_name }}"
ignore_missing_imports = true
python_version = "^3.13"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.coverage.run]
source_pkgs = [
  "{{ cookiecutter.repo_name }}",
]

########################################################################################
# PROJECT CONFIGURATION                                                                #
########################################################################################
[project]
name = "{{ cookiecutter.repo_name }}"
authors = [
    {name = "{{ cookiecutter.author_name }}"}
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["packaging", "python"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
dependencies = [
    "requests",
    # Add other dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "tox",
    "coverage",
    "flake8",
    "pre-commit",
    "mypy",
    "black",
    "ruff",
    "daves_utilities",
    # Add other development dependencies here
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/{{ cookiecutter.repo_name }}/_version.py"
